--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Inicio | Colegio Superior de Ciencias Valle de Casta&ntilde;o</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <link rel="alternate" type="application/rss+xml" title="Colegio Superior de Ciencias Valle de Castaño &raquo; Feed" href="https://www.valledecastano.edu.mx/feed/"/>
+  <link rel="alternate" type="application/rss+xml" title="Colegio Superior de Ciencias Valle de Castaño &raquo; Feed de los comentarios" />
+  <link rel="canonical" href="https://www.valledecastano.edu.mx/"/>
+  <link rel='shortlink' href='https://www.valledecastano.edu.mx/'/>
+  <meta content="El Colegio Superior de Ciencias “Valle de Casta&ntilde;o” es una comunidad de aprendizaje comprometida con la formaci&oacute;n profesional y de posgrado de los individuos, basada en planes y programas de estudio con reconocimiento de validez oficial, que centran el proceso educativo en el estudiante, y donde los docentes, a trav&eacute;s de estrategias de aprendizaje innovadoras, crean el ambiente propicio para que &eacute;stos construyan su propio conocimiento, logrando as&iacute;, desarrollar los rasgos del perfil de egreso; lo cual permite a la instituci&oacute;n y a los egresados influir en la transformaci&oacute;n y desarrollo de la comunidad con un sentido social proactivo y humanista." name="description">
+  <meta content="Colegio Superior de Ciencias Valle de Castaño, Valle de Castaño, univerdidad Apodaca, universidades Apodaca" name="keywords">
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/apple-icon-60x60.png">
@@ -138,50 +142,53 @@
         </div>
 
         <div class="row portfolio-container">
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-preparatoria">
-            <a href="oferta_educativa/preparatoria.html">
+            <a href="oferta-educativa/preparatoria.html">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Preparatoria</h4>
               </div>
             </a>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-licenciaturas">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <a href="oferta-educativa/derecho.html">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Licenciatura en Derecho</h4>
             </div>
+            </a>
           </div>
-
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-licenciaturas">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <a href="oferta-educativa/lati.html">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Licenciatura Administraci&oacute;n de Tecnolog&iacute;as de la Informaci&oacute;n</h4>
             </div>
+            </a>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-licenciaturas">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <a href="oferta-educativa/lae.html">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Licenciatura Administraci&oacute;n de Empresas</h4>
             </div>
+            </a>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-licenciaturas">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <a href="oferta-educativa/lcp.html">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Licenciatura Administraci&oacute;n de Contadur&iacute;a P&uacute;blica</h4>
+              <h4>Licenciatura en Contadur&iacute;a P&uacute;blica</h4>
             </div>
+            </a>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-maestrias">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Maestr&iacute;a en Psicolog&iacute;a Educativa</h4>
-            </div>
+            <a href="oferta-educativa/mpe.html">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Maestr&iacute;a en Psicolog&iacute;a Educativa</h4>
+              </div>
+            </a>
           </div>
 
         </div>
@@ -195,9 +202,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Team</h2>
-          <h3>Our Hardworking <span>Team</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <h2>¡YO SOY VALLE!</h2>
+          <p>Un lugar especial para los alumnos y maestros del Colegio Superior de Ciencias «Valle de Casta&ntilde;o»</p>
         </div>
 
         <div class="row">
@@ -284,9 +290,8 @@
           <div class="container">
     
             <div class="section-title">
-              <h2>Services</h2>
-              <h3>We do offer awesome <span>Services</span></h3>
-              <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+              <h2>bibliotecas</h2>
+              <p>En este espacio encontraras los accesos a las mejores bibliotecas multimedia del País y del mundo.</p>
             </div>
     
             <div class="row">
@@ -332,9 +337,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <h3>Contact <span>Us</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <h2>Cont&aacute;ctanos</h2>
         </div>
 
         <div>
@@ -393,7 +396,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">E N V I A R</button></div>
             </form>
 
           </div>
@@ -426,8 +429,6 @@
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
